#1 updated index.html
html code from breakdown sketch

--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-<!-- HTML -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Snappthis
+    </title>
+</head>
+<body>
+    <header>
+        <div class="Header">
+            <h1>Snappthis</h1>
+            <div class="profileIcon"></div> <!--Hier komt een profile icon-->
+        </div>
+
+    </header>
+    <main>
+        <section class="img-grid"> <!--15 lebrons in een grid van 3x3/3x4/3x5-->
+            <div class="grid-item"><img src=""alt="Lebron James"></div>
+            <div class="grid-item"><img src=""alt="Lebron James"></div>
+            <div class="grid-item"><img src=""alt="Lebron James"></div>
+            <div class="grid-item"><img src=""alt="Lebron James"></div>
+            <div class="grid-item"><img src=""alt="Lebron James"></div>
+            <div class="grid-item"><img src=""alt="Lebron James"></div>
+            <div class="grid-item"><img src=""alt="Lebron James"></div>
+            <div class="grid-item"><img src=""alt="Lebron James"></div>
+            <div class="grid-item"><img src=""alt="Lebron James"></div>
+        </section>
+
+    </main>
+    <footer>
+        <nav class="bottomNav"> <!--Icons voor navigatie: people, search, profile, settings-->
+            <button class="nav-btn"></button>
+            <button class="nav-btn"></button>
+            <button class="nav-btn"></button>
+            <button class="nav-btn"></button>
+        </nav>
+
+
+    </footer>
+</body>
+</html>
